# opencv4_tutorials

c_plus_plus/: openCV4_install.md
c_plus_plus/code_001/: CMakeLists.txt  main.cpp
c_plus_plus/code_002/: CMakeLists.txt  init_mat.cpp
c_plus_plus/code_003/: CMakeLists.txt  cal_mat.cpp
c_plus_plus/code_004/: CMakeLists.txt  read_mat.cpp
c_plus_plus/code_005/: CMakeLists.txt  read_img.cpp  read_video.cpp
